--- a/shared/package.json
+++ b/shared/package.json
@@ -5,11 +5,13 @@
   "private": true,
   "main": "index.ts",
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
+    "ws": "^8.18.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "typescript": "5.6.3"
   }
-} 
+}
