--- a/mobile/package.json
+++ b/mobile/package.json
@@ -27,10 +27,11 @@
     "react-hook-form": "^7.71.1",
     "react-intl": "^8.0.11",
     "react-native": "0.81.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
+    "react-native-svg": "^15.12.1",
     "react-native-worklets": "0.5.1",
     "react-native-worklets-core": "^1.6.2",
     "tailwindcss": "^3.4.17",
