config: Adjust server build output paths and configure root package to use ES modules.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ecommerce-platform",
+  "type": "module",
   "private": true,
   "scripts": {
     "install:shared": "cd shared && npm install",
