--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "NODE_ENV=development tsx index.ts",
-    "build": "esbuild index.ts --platform=node --packages=external --bundle --format=esm --outdir=../dist",
-    "start": "NODE_ENV=production node ../dist/index.js"
+    "build": "esbuild index.ts --platform=node --packages=external --bundle --format=esm --outdir=./dist",
+    "start": "NODE_ENV=production node ./dist/index.js"
   },
   "dependencies": {
     "@jridgewell/trace-mapping": "^0.3.25",
