--- a/mobile/app.json
+++ b/mobile/app.json
@@ -34,6 +34,19 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "4bc7e2b5-d474-4f8f-b6b0-f27aed50c610"
+      }
+    },
+    "owner": "kemaltt",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/4bc7e2b5-d474-4f8f-b6b0-f27aed50c610"
     }
   }
 }
