--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "expo-localization": "^17.0.8",
     "expo-router": "^6.0.21",
     "expo-status-bar": "~3.0.9",
+    "expo-updates": "~29.0.16",
     "lucide-react-native": "^0.562.0",
     "nativewind": "^4.2.1",
     "postcss": "^8.5.6",
