--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "expo-image": "^3.0.11",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "^8.0.11",
+    "expo-local-authentication": "~17.0.8",
     "expo-localization": "^17.0.8",
     "expo-router": "^6.0.21",
     "expo-status-bar": "~3.0.9",
