--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "expo-local-authentication": "~17.0.8",
     "expo-localization": "^17.0.8",
     "expo-router": "^6.0.21",
+    "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-updates": "~29.0.16",
     "lucide-react-native": "^0.562.0",
