--- a/mobile/package.json
+++ b/mobile/package.json
@@ -4,8 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "axios": "^1.13.2",
     "expo": "~54.0.31",
     "expo-constants": "^18.0.13",
+    "expo-haptics": "~15.0.8",
     "expo-image": "^3.0.11",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "^8.0.11",
