--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "DeinShop",
-    "slug": "DeinShop",
+    "slug": "DeinShop-Mobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -41,7 +41,7 @@
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "4bc7e2b5-d474-4f8f-b6b0-f27aed50c610"
+        "projectId": "b3e48c55-579b-4836-a12f-3f4d560cc61f"
       }
     },
     "owner": "kemaltt",
@@ -49,7 +49,7 @@
       "policy": "appVersion"
     },
     "updates": {
-      "url": "https://u.expo.dev/4bc7e2b5-d474-4f8f-b6b0-f27aed50c610"
+      "url": "https://u.expo.dev/b3e48c55-579b-4836-a12f-3f4d560cc61f"
     }
   }
 }
