--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
+    "apple-signin-auth": "^2.0.0",
     "connect-pg-simple": "^10.0.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "google-auth-library": "^10.5.0",
     "memorystore": "^1.6.7",
     "nanoid": "^5.0.6",
     "nodemailer": "^7.0.0",
@@ -43,4 +45,4 @@
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
   }
-} 
+}
