--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     runtime: node
     region: frankfurt
     plan: free
-    buildCommand: cd server && npm install && npm run build
+    buildCommand: cd server && NPM_CONFIG_PRODUCTION=false npm install && npm run build
     startCommand: cd server && npm start
     envVars:
       - key: DATABASE_URL
