build: Add `export {};` to `express.d.ts` and configure `typeRoots` in `tsconfig.json` for custom type declarations.

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,7 +13,7 @@
     "allowImportingTsExtensions": true,
     "moduleResolution": "bundler",
     "baseUrl": ".",
-
+    "typeRoots": ["./node_modules/@types", "./src/types"],
     "paths": {
       "@shared/*": ["../shared/*"],
       "drizzle-orm": ["../shared/node_modules/drizzle-orm"],
