feat: Set up monorepo workspaces, configure Vercel API entry point, and update Drizzle ORM client initialization.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "ecommerce-platform",
 
   "private": true,
+  "workspaces": [
+    "server",
+    "shared"
+  ],
   "scripts": {
     "install:shared": "cd shared && npm install",
     "install:server": "cd server && npm install",
