--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,17 @@
 {
   "version": 2,
-  "functions": {
-    "server/index.ts": {
-      "runtime": "@vercel/node",
-      "includeFiles": "shared/**"
-    }
-  },
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "server/index.ts"
+      "destination": "api/index.ts"
     },
     {
       "source": "/verify-email",
-      "destination": "server/index.ts"
+      "destination": "api/index.ts"
+    },
+    {
+      "source": "/",
+      "destination": "api/index.ts"
     }
   ]
 }
