--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,7 @@
   "version": 2,
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "api/index.ts"
-    },
-    {
-      "source": "/verify-email",
-      "destination": "api/index.ts"
-    },
-    {
-      "source": "/",
+      "source": "/(.*)",
       "destination": "api/index.ts"
     }
   ]
