--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy:build": "cd shared && npm install && cd ../server && npm install && npm run build"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "zod": "^3.24.2"
