--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@tanstack/react-query": "^5.90.17",
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.31",
     "expo-apple-authentication": "~8.0.8",
     "expo-auth-session": "~7.0.10",
