--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
+    "expo-server-sdk": "^4.0.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "google-auth-library": "^10.5.0",
