--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,6 +22,7 @@
     "expo-auth-session": "~7.0.10",
     "expo-constants": "^18.0.13",
     "expo-crypto": "~15.0.8",
+    "expo-device": "~8.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "^3.0.11",
     "expo-image-picker": "~17.0.10",
@@ -29,6 +30,7 @@
     "expo-linking": "^8.0.11",
     "expo-local-authentication": "~17.0.8",
     "expo-localization": "^17.0.8",
+    "expo-notifications": "~0.32.16",
     "expo-router": "^6.0.21",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
